name:                  ambiata-jetski
version:               0.0.1
license:               BSD3
license-file:          LICENSE
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              Jetski C compilation
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           Jetski provides C compilation and execution as a haskell library

tested-with:
  GHC==8.0.2,
  GHC==8.2.2,
  GHC==8.4.4,
  GHC==8.6.5,
  GHC==8.8.1

source-repository head
  type:     git
  location: https://github.com/icicle-lang/jetski.git

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , bytestring                      == 0.10.*
                     , cryptonite                      == 0.15.*
                     , directory                       >= 1.2        && < 1.4
                     , exceptions                      >= 0.6        && < 0.11
                     , filepath                        == 1.4.*
                     , memory                          >= 0.13       && < 0.16
                     , process                         >= 1.2.3      && < 1.7
                     , temporary                       == 1.2.*
                     , text                            == 1.2.*
                     , transformers                    >= 0.3        && < 0.6
                     , transformers-either
                     , unix                            == 2.7.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Jetski
                       Jetski.Hash
                       Jetski.OS

                       Jetski.Foreign.Argument
                       Jetski.Foreign.Binding
                       Jetski.Foreign.Function
                       Jetski.Foreign.Return

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  other-modules:       Test.Jetski
                       Test.Jetski.Arbitrary

  build-depends:
                       base
                     , ambiata-jetski
                     , ambiata-p
                     , containers
                     , QuickCheck
                     , quickcheck-instances
                     , hedgehog-corpus
                     , text
                     , transformers
                     , transformers-either

test-suite test-dynamic
  -- Cabal < 1.24 doesn't build this properly, but there's no way to do a
  -- conditional based on the cabal version, the best we can do is use GHC as a
  -- proxy because we know that GHC 8.0 requires at least Cabal 1.24.
  if impl(ghc < 8.0)
    buildable:         False

  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -dynamic -O2

  hs-source-dirs:
                       test

  other-modules:       Test.Jetski
                       Test.Jetski.Arbitrary

  build-depends:
                       base
                     , ambiata-jetski
                     , ambiata-p
                     , containers
                     , QuickCheck
                     , quickcheck-instances
                     , hedgehog-corpus
                     , text
                     , transformers
                     , transformers-either
